Corrected hero section on mobile

--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ a {
 
 .hero .text {
   color: var(--color--light);
+  margin-bottom: 3em;
 }
 
 .hero a {
